--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,9 @@
+name: PyPi release
+
 on:
   release:
-    types: [published]
-    
+    types: [ published ]
+
 jobs:
   release-build:
     runs-on: ubuntu-latest
@@ -15,6 +17,7 @@ jobs:
 
       - name: Build release distributions
         run: |
+          python -m pip install --upgrade pip
           python -m pip install --upgrade build
           python -m build
 
