--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,6 +1,8 @@
 name: Python unittest
 
-on: [ push ]
+on:
+  push:
+  pull_request:
 
 jobs:
   build:
@@ -8,7 +10,8 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ '3.7', '3.8', '3.9', '3.10' ]
+        # https://devguide.python.org/versions/
+        python-version: [ '3.9', '3.10', '3.11', '3.12', '3.13' ]
 
     steps:
       - uses: actions/checkout@v4
