--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ua-generator
-version = 1.0.7
+version = 2.0.0
 author = Ekin Karadeniz
 author_email = iamdual@icloud.com
 description = A random user-agent generator
@@ -18,7 +18,7 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.6, <3.8
+python_requires = >=3.8
 
 [options.packages.find]
 where = src
