--- a/.github/workflows/update-bot.yml
+++ b/.github/workflows/update-bot.yml
@@ -23,11 +23,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r scripts/update_bot/requirements.txt
+          pip install -r packages/update_bot/requirements.txt
 
-      - name: Run update scripts
+      - name: Run update bot
         run: |
-          python -m scripts.update_bot update
+          python -m packages.update_bot update
 
       - name: Check for changes
         id: git-check
@@ -46,16 +46,14 @@ jobs:
         uses: peter-evans/create-pull-request@v7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "Automated data update"
-          title: "Automated data update"
+          commit-message: "[Update Bot] Version updates"
+          title: "[Update Bot] Version updates"
           body: |
-            This pull request includes automated weekly updates for:
+            This pull request includes automated version updates for one or more of the following:
             - Chrome
             - Edge
             - Firefox
             - iOS
             - macOS
-            
-            Please fix before merging.
-          branch: "bot/weekly-update"
+          branch: "bot/version-update"
           delete-branch: true
