--- a/.github/workflows/update-bot.yml
+++ b/.github/workflows/update-bot.yml
@@ -23,11 +23,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r packages/update_bot/requirements.txt
+          pip install -r cli/update_bot/requirements.txt
 
       - name: Run update bot
         run: |
-          python -m packages.update_bot update
+          python -m cli.update_bot update
 
       - name: Check for changes
         id: git-check
