update some descriptions

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ url = https://github.com/iamdual/ua-generator
 project_urls =
     Bug Tracker = https://github.com/iamdual/ua-generator/issues
 classifiers =
+    Topic :: Internet :: WWW/HTTP
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
